--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mern-monolith",
   "version": "1.0.0",
   "scripts": {
-    "install-all": "npm install && npm install --prefix frontend",
-    "build": "npm run build --prefix frontend",
-    "start": "node backend/server.js"
+    "install-all": "npm install --prefix backend && npm install --prefix frontend",
+  "build": "npm run build --prefix frontend",
+  "start": "node backend/server.js"
   }
 }
