--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
+version: '3.8'
+
 services:
   server:
-    image: rpajany/pos-app:latest # Pulls from Docker Hub
+    image: rpajany/pos-app:latest
     build: .
     ports:
       - "5000:5000"
     environment:
       - PORT=5000
-      - LOCAL_MONGODB_URI=mongodb://db:27017/pos-db  # Connects to the 'db' service below
+      - LOCAL_MONGODB_URI=mongodb://db:27017,db2:27017,db3:27017/pos-db?replicaSet=rs0
       - JWT_SECRET=secretpassord
       - REFRESH_TOKEN_SECRET=secretpassord
     depends_on:
@@ -14,10 +16,34 @@ services:
 
   db:
     image: mongo:latest
+    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
     ports:
-      - "27018:27017" # Maps PC port 27018 -> Docker port 27017
+      - "27018:27017"
     volumes:
-      - mongo-data:/data/db
+      - mongo-data1:/data/db
+
+  db2:
+    image: mongo:latest
+    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    volumes:
+      - mongo-data2:/data/db
+
+  db3:
+    image: mongo:latest
+    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    volumes:
+      - mongo-data3:/data/db
+
+  # This helper service initializes the replica set automatically
+  db-init:
+    image: mongo:latest
+    depends_on:
+      - db
+      - db2
+      - db3
+    entrypoint: [ "/bin/bash", "-c", "sleep 10 && mongosh --host db:27017 --eval 'rs.initiate({_id: \"rs0\", members: [{_id: 0, host: \"db:27017\"}, {_id: 1, host: \"db2:27017\"}, {_id: 2, host: \"db3:27017\"}]})'" ]
 
 volumes:
-  mongo-data:
+  mongo-data1:
+  mongo-data2:
+  mongo-data3:
