--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
 
   db:
     image: mongo:latest
+    container_name: pos_mongo_primary  # MONGO_CONTAINER="pos_mongo_primary"
     command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
     ports:
       - "27018:27017"
